fix image size on mobile view

--- a/moire/css/media.css
+++ b/moire/css/media.css
@@ -57,7 +57,7 @@
   }
 
   .catalog__pic {
-    height: auto;
+    height: 430px;
   }
 
   .check-list {
